--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/guava-18.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jsr305-1.3.9.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.10.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-2.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
