--- a/pom.xml
+++ b/pom.xml
@@ -40,4 +40,29 @@
       <version>2.7</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <!-- FindBugs Static Analysis -->
+      <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>findbugs-maven-plugin</artifactId>
+          <version>2.5.2</version>
+          <configuration>
+              <effort>Max</effort>
+              <threshold>Low</threshold>
+              <failOnError>true</failOnError>
+              <includeFilterFile>${session.executionRootDirectory}/.findbugs/security-include.xml</includeFilterFile>
+              <excludeFilterFile>${session.executionRootDirectory}/.findbugs/security-exclude.xml</excludeFilterFile>
+              <plugins>
+                  <plugin>
+                      <groupId>com.h3xstream.findsecbugs</groupId>
+                      <artifactId>findsecbugs-plugin</artifactId>
+                      <version>1.2.0</version>
+                  </plugin>
+              </plugins>
+          </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
