--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         </configuration>
       </plugin>
 
-      <!-- Victims Enforcer Dependency Check -->
+      <!-- Victims Enforcer Dependency Check 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
@@ -86,39 +86,39 @@
               <configuration>
                 <rules>
                   <rule implementation="com.redhat.victims.VictimsRule">
-                    <!--
+                    <!-\-
                       Valid options are:
 
                       disabled: Rule is still run but only INFO level messages aand no errors.
                       warning : Rule will spit out a warning message but doesn't result in a failure.
                       fatal   : Rule will spit out an error message and fail the build.
-                    -->
+                    -\->
                     <metadata>warning</metadata>
 
-                    <!--
+                    <!-\-
                       Valid options are:
 
                       disabled: Rule is still run but only INFO level messages aand no errors.
                       warning : Rule will spit out a warning message but doesn't result in a failure.
                       fatal   : Rule will spit out an error message and fail the build.
-                    -->
+                    -\->
                     <fingerprint>fatal</fingerprint>
 
-                    <!--
+                    <!-\-
                       Valid options are:
 
                       auto  : Automatically update the database entries on each build.
                       daily : Update the database entries once per day.
                       weekly: Update the database entries once per week.
                       offline   : Disable the synchronization mechanism.
-                    -->
+                    -\->
                     <updates>weekly</updates>
                   </rule>
                 </rules>
               </configuration>
             </execution>
           </executions>
-        </plugin>
+        </plugin> -->
     </plugins>
   </build>
 </project>
