--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,17 @@
 
   <build>
     <plugins>
+      <!-- Set Java7 as source/target for compilation -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.2</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+
       <!-- FindBugs Static Analysis -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -64,7 +75,7 @@
         </configuration>
       </plugin>
 
-      <!-- Victims Enforcer Dependency Check 
+      <!-- Victims Enforcer Dependency Check
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
