--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,14 @@
       <version>1.7.10</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.3.2</version>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.10</version>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
@@ -77,6 +82,7 @@
         <version>1.4.3-r1</version>
         <executions>
           <execution>
+          <phase>generate-sources</phase>          
             <goals>
               <goal>generate</goal>
             </goals>
