--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       <artifactId>joda-time</artifactId>
       <version>2.7</version>
     </dependency>
+    <dependency>
+      <groupId>com.googlecode.java-diff-utils</groupId>
+      <artifactId>diffutils</artifactId>
+      <version>1.3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -82,7 +87,7 @@
         <version>1.4.3-r1</version>
         <executions>
           <execution>
-          <phase>generate-sources</phase>          
+          <phase>generate-sources</phase>
             <goals>
               <goal>generate</goal>
             </goals>
