--- a/ripe-rpsl/pom.xml
+++ b/ripe-rpsl/pom.xml
@@ -46,6 +46,11 @@
       <artifactId>diffutils</artifactId>
       <version>1.3.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
   </dependencies>
 
   <build>
