lexer wrapper returns something similar to an AST for the parsed text

--- a/parser-app/pom.xml
+++ b/parser-app/pom.xml
@@ -16,5 +16,10 @@
       <artifactId>ripe-rpsl</artifactId>
       <version>0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.0</version>
+    </dependency>
   </dependencies>
 </project>
