refactored package to rpsl4j

--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.rpsl4j</groupId>
-  <artifactId>parser-app</artifactId>
+  <artifactId>rpsl4j-generator</artifactId>
   <packaging>jar</packaging>
   <version>0.1-SNAPSHOT</version>
-  <name>parser-app</name>
+  <name>rpsl4j-generator</name>
 
   <dependencies>
     <dependency>
       <groupId>org.rpsl4j</groupId>
-      <artifactId>rpsl4j</artifactId>
-      <version>1.80-SNAPSHOT</version>
+      <artifactId>rpsl4j-parser</artifactId>
+      <version>1.80</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
