--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>jcommander</artifactId>
       <version>1.30</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.lukehutch</groupId>
+      <artifactId>fast-classpath-scanner</artifactId>
+      <version>1.2.5</version>
+    </dependency>
   </dependencies>
 
   <build>
