--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,55 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.rpsl4j</groupId>
   <artifactId>rpsl4j-generator</artifactId>
   <packaging>jar</packaging>
   <version>0.1-SNAPSHOT</version>
-  <name>rpsl4j-generator</name>
+
+  <name>rpsl4j configuration generator</name>
+  <description>A command line application using rpsl4j-parser to generate routing configurations</description>
+  <url>https://github.com/rpsl4j/rpsl4j-generator</url>
+  <licenses>
+    <license>
+      <name>GNU Affero General Public License, Version 3.0</name>
+      <url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
+    </license>
+  </licenses>
+
+  <developers>
+   <developer>
+     <name>Benjamin Roberts</name>
+     <email>benjamin.roberts@anu.edu.au</email>
+     <organization>rpsl4j</organization>
+     <organizationUrl>http://rpsl4j.org</organizationUrl>
+   </developer>
+   <developer>
+     <name>Nathan Kelly</name>
+     <email>u5348836@anu.edu.au</email>
+     <organization>rpsl4j</organization>
+    <organizationUrl>http://rpsl4j.org</organizationUrl>
+   </developer>
+   <developer>
+     <name>Andrew Maxwell</name>
+     <email>u5350273@anu.edu.au</email>
+     <organization>rpsl4j</organization>
+     <organizationUrl>http://rpsl4j.org</organizationUrl>
+   </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git@github.com:rpsl4j/rpsl4j-generator.git</connection>
+    <developerConnection>scm:git:git@github.com:rpsl4j/rpsl4j-generator.git</developerConnection>
+    <url>git@github.com:rpsl4j/rpsl4j-generator.git</url>
+  </scm>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <dependencies>
     <dependency>
@@ -100,45 +144,102 @@
         <executions>
           <execution>
             <id>enforce-victims-rule</id>
-              <goals>
-                <goal>enforce</goal>
-              </goals>
-              <configuration>
-                <rules>
-                  <rule implementation="com.redhat.victims.VictimsRule">
-                    <!-\-
-                      Valid options are:
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <rule implementation="com.redhat.victims.VictimsRule">
+                  <!-\-
+                    Valid options are:
 
-                      disabled: Rule is still run but only INFO level messages aand no errors.
-                      warning : Rule will spit out a warning message but doesn't result in a failure.
-                      fatal   : Rule will spit out an error message and fail the build.
-                    -\->
-                    <metadata>warning</metadata>
+                    disabled: Rule is still run but only INFO level messages aand no errors.
+                    warning : Rule will spit out a warning message but doesn't result in a failure.
+                    fatal   : Rule will spit out an error message and fail the build.
+                  -\->
+                  <metadata>warning</metadata>
 
-                    <!-\-
-                      Valid options are:
+                  <!-\-
+                    Valid options are:
 
-                      disabled: Rule is still run but only INFO level messages aand no errors.
-                      warning : Rule will spit out a warning message but doesn't result in a failure.
-                      fatal   : Rule will spit out an error message and fail the build.
-                    -\->
-                    <fingerprint>fatal</fingerprint>
+                    disabled: Rule is still run but only INFO level messages aand no errors.
+                    warning : Rule will spit out a warning message but doesn't result in a failure.
+                    fatal   : Rule will spit out an error message and fail the build.
+                  -\->
+                  <fingerprint>fatal</fingerprint>
 
-                    <!-\-
-                      Valid options are:
+                  <!-\-
+                    Valid options are:
 
-                      auto  : Automatically update the database entries on each build.
-                      daily : Update the database entries once per day.
-                      weekly: Update the database entries once per week.
-                      offline   : Disable the synchronization mechanism.
-                    -\->
-                    <updates>weekly</updates>
-                  </rule>
-                </rules>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin> -->
+                    auto  : Automatically update the database entries on each build.
+                    daily : Update the database entries once per day.
+                    weekly: Update the database entries once per week.
+                    offline   : Disable the synchronization mechanism.
+                  -\->
+                  <updates>weekly</updates>
+                </rule>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin> -->
+      <!-- build java source and docs -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- Sign artifacts with GPG key-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+            <configuration>
+              <keyname>0x036FA654</keyname>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- Sonatype deployment -->
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.3</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>false</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
