--- a/pom.xml
+++ b/pom.xml
@@ -153,21 +153,18 @@
                   <!-\-
                     Valid options are:
 
-                    disabled: Rule is still run but only INFO level messages aand no errors.
-                    warning : Rule will spit out a warning message but doesn't result in a failure.
-                    fatal   : Rule will spit out an error message and fail the build.
-                  -\->
-                  <metadata>warning</metadata>
-
+                      disabled: Rule is still run but only INFO level messages and no errors.
+                      warning : Rule will spit out a warning message but doesn't result in a failure.
+                      fatal   : Rule will spit out an error message and fail the build.
+                    -\->
+                    <metadata>warning</metadata>
                   <!-\-
                     Valid options are:
-
-                    disabled: Rule is still run but only INFO level messages aand no errors.
-                    warning : Rule will spit out a warning message but doesn't result in a failure.
-                    fatal   : Rule will spit out an error message and fail the build.
-                  -\->
-                  <fingerprint>fatal</fingerprint>
-
+                      disabled: Rule is still run but only INFO level messages and no errors.
+                      warning : Rule will spit out a warning message but doesn't result in a failure.
+                      fatal   : Rule will spit out an error message and fail the build.
+                    -\->
+                    <fingerprint>fatal</fingerprint>
                   <!-\-
                     Valid options are:
 
