added slf4j-simple as dependency for test scope

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
       <artifactId>fast-classpath-scanner</artifactId>
       <version>1.8.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.12</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
